<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name"
            app:shapeAppearanceOverlay="@style/ShapeableImageView.Common"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_header_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Black.18"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Adel Dolgov" />

        <TextView
            android:id="@+id/domainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/info_header_domain"
            android:textAppearance="@style/TextAppearance.AppCompat.Black.16"
            android:textColor="@color/grey"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/statusName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/info_header_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Black.14"
            android:textColor="@color/grey"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toBottomOf="@+id/domainName" />

        <TextView
            android:id="@+id/followersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/info_header_company"
            android:textAppearance="@style/TextAppearance.AppCompat.Black.20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/statusName"
            app:layout_constraintTop_toBottomOf="@+id/statusName" />

        <TextView
            android:id="@+id/followersPluralText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/info_header_company_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Black.16"
            app:layout_constraintStart_toStartOf="@+id/followersText"
            app:layout_constraintTop_toBottomOf="@+id/followersText" />

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/info_header_about"
            android:textAppearance="@style/TextAppearance.AppCompat.Black.18"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>